[ash-md] Makes Ctrl+W accelerator close a selected window in overview mode

Added accelerator handling:
- Ctrl+W - closes a selected window (avoiding handling 'w').
- Shift+Tab - cycles left (Shift modifier wasn't handled before).

BUG=626165
TEST=WindowSelectorTest.CloseWindowWithKey

Review-Url: https://codereview.chromium.org/2131603004
Cr-Commit-Position: refs/heads/master@{#404411}

Former-commit-id: 7f53f2ef11c87d9578f55950f713628908cd5c5d